scss/modules/dropdown.scss
//
// Dropdown
// --------------------------------------------------

.dropdown {
    display: inline-block;
    position: relative;

    &.dropdown-show {
        .dropdown-menu {
            display: block;
        }
    }
}

.dropdown-shadow {
    @include standard-box-shadow(3px);
    &.dropdown-align-right {
        right: -3px;
    }
}

.dropdown-menu {
    width: 250px;
    display: inline-block;
    position: absolute;
    top: 20px;
    left: 0;
    margin-top: -5px;
    margin-left: 5px;
    margin-bottom: 40px;
    background-color: $white;
    border: 1px solid $grayLighter;
    z-index: 2000;
    border-radius: $dropdownBorderRadius;

    & > ul {
        list-style: none;
        margin: 0;
        padding: 10px 0;

        & > li {
            padding: 0 20px;
            line-height: 30px;
            text-align: left;
            &:hover,
            &.hover {
                background-color: $highlightColor;
                cursor: pointer;
                color: $white;
            }
            &.divider {
              height: 1px;
              margin: 5px 0 10px 0;
              padding: 0;
              overflow: hidden;
              background-color: $grayLighterer;
              cursor: default;
            }
        }
    }
}

.dropdown-align-right {
    right: 6px;
    left: inherit;
}

.dropdown-footer {
    border-top: 1px solid #ccc;
    padding: 10px 10px;
}

.dropdown-toggle {
    display: inline-block;
    cursor: pointer;
    &::after {
        content: "";
        display: inline-block;
        position: relative;
        top: -2px;
        margin-left: 5px;
        width: 0;
        height: 0;
        border-left: 4px solid transparent;
        border-right: 4px solid transparent;

        border-top: 6px solid #000;
    }
}

.dropdown-trigger {
    height: 30px;
    line-height: 30px;
    text-align: center;
    border: 1px solid $grayLighter;
    border-radius: 4px;
    padding: 0 10px;
    cursor: pointer;
}

